Always redirect link to root domain
As suggested on the mailing list [1]

[1] https://mail.openvswitch.org/pipermail/ovs-dev/2017-January/327093.html

Signed-off-by: Stephen Finucane <stephen@that.guru>
Suggested-by: Joe Stringer <joe@ovn.org>

--- a/ovs_sphinx_theme/theme/ovs/layout.html
+++ b/ovs_sphinx_theme/theme/ovs/layout.html
@@ -36,9 +36,8 @@
   </div>
   <div id="logo">
     <div class="container">
-      <a href="{{ pathto(master_doc) }}">
-        {# This should not be using height/width tags #}
-        <img src="{{ pathto('_static/vswitch.png', 1) }}" alt="Open vSwitch" height="100" width="154"></a>
+      <a href="//openvswitch.org">
+        <img src="{{ pathto('_static/vswitch.png', 1) }}" alt="Open vSwitch"></a>
     </div>
   </div>
   <div class="subnav">
