Use www.openvswitch.org instead of openvswitch.org
openvswitch.org is currently pointing to a host with an invalid SSL
cert.  Don't link to it to reduce the impact while it gets sorted out.

Signed-off-by: Russell Bryant <rbryant@redhat.com>

--- a/ovs_sphinx_theme/theme/ovs/layout.html
+++ b/ovs_sphinx_theme/theme/ovs/layout.html
@@ -36,7 +36,7 @@
   </div>
   <div id="logo">
     <div class="container">
-      <a href="//openvswitch.org">
+      <a href="//www.openvswitch.org">
         <img src="{{ pathto('_static/vswitch.png', 1) }}" alt="Open vSwitch"></a>
     </div>
   </div>
@@ -47,7 +47,7 @@
         <input type="checkbox" id="tm">
         <ul class="main-menu clearfix">
           <li>
-            <a href="//openvswitch.org/features">Overview</a>
+            <a href="//www.openvswitch.org/features">Overview</a>
           </li>
           <li>
             <a href="/">Documentation
@@ -60,11 +60,11 @@
                 <a href="/">Open vSwitch (latest)</a>
               </li>
               <li>
-                <a href="//openvswitch.org/support/dist-docs-2.5">Open vSwitch 2.5.x
+                <a href="//www.openvswitch.org/support/dist-docs-2.5">Open vSwitch 2.5.x
                 </a>
               </li>
               <li>
-                <a href="//openvswitch.org/support/dist-docs">Man Pages</a>
+                <a href="//www.openvswitch.org/support/dist-docs">Man Pages</a>
               </li>
             </ul>
           </li>
@@ -76,33 +76,33 @@
             <input type="checkbox" id="sm21">
             <ul class="sub-menu">
               <li>
-                <a href="//openvswitch.org/support/ovscon2016">OVScon 2016</a>
+                <a href="//www.openvswitch.org/support/ovscon2016">OVScon 2016</a>
               </li>
               <li>
-                <a href="//openvswitch.org/support/ovscon2015">OVScon 2015</a>
+                <a href="//www.openvswitch.org/support/ovscon2015">OVScon 2015</a>
               </li>
               <li>
-                <a href="//openvswitch.org/support/ovscon2014">OVScon 2014</a>
+                <a href="//www.openvswitch.org/support/ovscon2014">OVScon 2014</a>
               </li>
               <li>
-                <a href="//openvswitch.org/support/papers">Papers</a>
+                <a href="//www.openvswitch.org/support/papers">Papers</a>
               </li>
               <li>
-                <a href="//openvswitch.org/support/slides">Presentations</a>
+                <a href="//www.openvswitch.org/support/slides">Presentations</a>
               </li>
               <li>
-                <a href="//openvswitch.org/support/interviews">Interviews</a>
+                <a href="//www.openvswitch.org/support/interviews">Interviews</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="//openvswitch.org/download">Download</a>
+            <a href="//www.openvswitch.org/download">Download</a>
           </li>
           <li>
             <a href="//mail.openvswitch.org/">Mailing Lists</a>
           </li>
           <li>
-            <a href="//openvswitch.org/charter">Charter</a>
+            <a href="//www.openvswitch.org/charter">Charter</a>
           </li>
         </ul>
       </nav>
